This commit will update my Dashboard file.

--- a/LA_Crime_Dashboard.html
+++ b/LA_Crime_Dashboard.html
@@ -1946,6 +1946,11 @@ trends, such as the prevalence of stolen vehicles. Interestingly,
 individuals aged 30 to 40 years old are frequently involved in reported
 incidents. Stay informed and vigilant as you explore the dynamic
 visualizations presented here.</p>
+<p>You can access all the R code utilized in this dashboard, including
+the scripts for generating the plots, constructing the dashboard itself,
+and all the necessary data files, by visiting my GitHub repository at
+the following link: <a href="https://github.com/SagnikChand/Data_Visualizations/tree/main">Data_Visualizations
+GitHub Repository</a>.</p>
 </div>
 <div id="column" class="section level2 tabset tabset-fade">
 <h2 class="tabset tabset-fade">Column</h2>
